Make sure the children of the sidebar don't overlap again

--- a/public/style.css
+++ b/public/style.css
@@ -1397,6 +1397,7 @@ body.mobile #chabad_body_page:has(#chabad_left_colum, .chabad_left_colum) div#ch
 }
 #chabad_body_page:has(#chabad_left_colum, .chabad_left_colum) #chabad_right_colum {
   grid-row: 100;
+  grid-template-rows: auto;
 }
 
 body:has(#cco_body > #photos > .photo[data-img="0"]) #cco_body > #photos {
